discussion/kv_engine/174181/174181_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

toy: add frontendflush histo

Change-Id: I2a8fcab59cfc88d087409a980a5ed67b8e5bd866

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2022-04-26 05:01:50.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-26 05:07:07.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6633/ : FAILURE

Compile error at [2022-04-26T05:05:33.562Z] ../kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6633/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38322/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38322/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16974/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34: error: no member named "FrontendFlushTime" in "magma::MagmaHistogramStats" [clang-diagnostic-error]
                      histoStats.FrontendFlushTime,
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16974/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3105:34:
error: no member named "FrontendFlushTime" in "magma::MagmaHistogramStats" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16974/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19102/ : FAILURE

Compile error at [2022-04-26T05:04:38.629Z] ../kv_engine/xattr/blob.cc:96:40:
error: ?cb::sized_buffer<char>::value_type* cb::sized_buffer<char>::buf? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19102/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18758/ : FAILURE

Compile error at [2022-04-26T05:06:27.150Z] ../kv_engine/xattr/blob.cc:96:40:
error: ?cb::sized_buffer<char>::value_type* cb::sized_buffer<char>::buf? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18758/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45617/ : FAILURE

Compile error at ..\kv_engine\xattr\blob.cc(96): error C2248: "cb::sized_buffer<char>::buf": cannot access private member declared in class "cb::sized_buffer<char>" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45617/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27173/ : FAILURE

Compile error at [2022-04-26T05:06:14.106Z] ../kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27173/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19800/ : FAILURE

Compile error at [2022-04-26T05:05:06.919Z] ../kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19800/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17880/ : FAILURE

Compile error at [2022-04-26T05:05:44.765Z] ../kv_engine/xattr/blob.cc:96:40:
error: "buf" is a private member of "cb::sized_buffer<char>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17880/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6726/ : FAILURE

Compile error at [2022-04-26T05:06:14.374Z] ../kv_engine/xattr/blob.cc:96:40:
error: ?cb::sized_buffer<char>::value_type* cb::sized_buffer<char>::buf? is private within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6726/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15942/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
